# django_dharma

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
django_dharma/: admin.py  base.py  collector.py  core.py  models.py  protocols.py
django_dharma/management/commands/: perform_check.py  perform_checks.py
django_dharma/migrations/: 0001_initial.py  0002_alter_anomaly_options_alter_anomaly_content_type_and_more.py
django_dharma/scripts/: mock_settings.py
django_dharma/tests/: test_anomalies.py  test_collector.py  test_core.py  test_models.py  test_protocols.py
test_project/test_app/: checks.py  models.py  tests.py
test_project/test_app/migrations/: 0001_initial.py
test_project/test_project/: settings.py  urls.py
