[tool.poetry]
name = "django-dharma"
version = "0.1.0"
description = "A project for managing Dharma checks in Django"
authors = ["Ivan Tabarelli <itabarelli@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
Django = "^4.2"

[tool.poetry.dev-dependencies]
tox = "^3.24.4"
tox-poetry = "^0.3.0"
flake8 = "^3.9.2"
isort = "^5.10.1"
pre-commit = "^2.13.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[tool.flake8]
max-line-length = 88
exclude = ["migrations"]

[tool.isort]
profile = "black"
